<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="bragi_label">Ringer</string>
    <string name="tonepicker_label">Tone Picker</string>

    <!-- context menu entries -->
    <string name="activate">Activate</string>
    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>


    <!-- option menu entries -->
    <string name="menu_option_preferences">Preferences</string>
    <string name="menu_option_about">About</string>
    <string name="menu_option_help">Help</string>


    <!-- activity names -->
    <string name="activity_main">Profiles</string>
    <string name="activity_preferences">Preferences</string>
    <string name="activity_sloteditor">Slots</string>
    <string name="activity_profileeditor">Edit Profile</string>
    <string name="activity_profileeditorvolume">Edit Profile Volumes</string>
    <string name="activity_profileeditorringtones">Edit Profile Ringtones</string>


    <!-- default profile names -->
    <string name="default_slot_email">Email</string>
    <string name="default_slot_sms">SMS</string>
    <string name="default_slot_im">IM</string>
    <string name="default_slot_calendar">Calendar</string>


    <!-- default slot names -->
    <string name="default_profile_home">Home</string>
    <string name="default_profile_work">Work</string>
    <string name="default_profile_theatre">Theatre</string>
    <string name="default_profile_loud">Loud</string>
    <string name="default_profile_music">Music</string>


    <!-- edit profile -->
    <string name="unset"></string>
    <string name="profile_editor_name">Profile Name</string>
    <string name="profile_editor_icon">Profile Icon</string>
    <string name="profile_editor_volume_screen">Volume Settings</string>
    <string name="profile_editor_volume_screen_summary">Volume sliders</string>
    <string name="profile_editor_ringtones_screen">Ringtones</string>
    <string name="profile_editor_ringtones_screen_summary">Configure ringer slots</string>
    <string name="profile_editor_default_ring">Default Ringtone</string>
    <string name="profile_editor_default_notify">Default Notification</string>
    <string name="profile_editor_default_alarm">Default Alarm</string>
    <string name="profile_editor_silent_mode">Silent Mode</string>
    <string name="profile_editor_vibrate_ring">Vibrate on Ring</string>
    <string name="profile_editor_vibrate_notify">Vibrate on Notification</string>
    <string name="profile_editor_volume_ringer">Ringer Volume</string>
    <string name="profile_editor_volume_notify">Notification Volume</string>
    <string name="profile_editor_volume_music">Media Volume</string>
    <string name="profile_editor_volume_call">In Call Volume</string>
    <string name="profile_editor_volume_system">System Sound Volume</string>
    <string name="profile_editor_volume_alarm">Alarm Volume</string>

    <!-- add profile dialog -->
    <string name="profile_dialog_new_name">Name for new profile</string>
    <string name="slot_dialog_new_name">Name for new slot</string>
    <string name="slot_dialog_rename">New name for slot \'%s\'</string>


    <!-- activate dialog -->
    <string name="activate_dialog_title">Activating profile</string>
    <string name="activate_dialog_message">Activating the \'%s\' profile...</string>

    <!-- backup/restore dialogs -->
    <string name="backup_dialog_message">Backing up to sd-card...</string>
    <string name="backup_success">Backup successful!</string>
    <string name="backup_failure">Backup failed...</string>
    <string name="restore_dialog_message">Restoring from to sd-card...</string>
    <string name="restore_success">Restore successful!</string>
    <string name="restore_failure">Restore failed...</string>
    <string name="confirm_backup_dialog_title">Backup to SD-Card</string>
    <string name="confirm_backup_dialog_message">This will overwrite any previous sd-card backup.\nAre you sure you want to proceed?</string>
    <string name="confirm_restore_dialog_title">Restore from SD-Card</string>
    <string name="confirm_restore_dialog_message">This will ERASE your current settings.\nAre you sure you want to restore?</string>

    <!-- confirm delete dialog -->
    <string name="confirm_delete_profile_dialog_title">Delete profile?</string>
    <string name="confirm_delete_profile_dialog_message">Are you sure you want to delete the \'%s\' profile?</string>
    <string name="confirm_delete_slot_dialog_title">Delete slot?</string>
    <string name="confirm_delete_slot_dialog_message">Are you sure you want to delete the \'%s\' slot?</string>


    <!-- app preferences -->
    <string name="preference_clear_slots_title">Erase Slots If Empty</string>
    <string name="preference_clear_slots_summary">Erase the previous slot when changing profile</string>
    <string name="preference_max_slot_size_title">Max Slot Size</string>
    <string name="preference_max_slot_size_summary">Maximum size in KB per ringtone to cache</string>
    <string name="preference_circle_crop_title">Circular Icon Crop</string>
    <string name="preference_circle_crop_summary">Use a circle when cropping images for icons</string>
    <string name="preference_help_category">Help</string>
    <string name="preference_show_tutorial_title">Show Tutorial</string>
    <string name="preference_show_tutorial_summary">Show the Getting Started tutorial again</string>
    <string name="preference_about_title">About</string>
    <string name="preference_about_summary">About ringer</string>
    <string name="preference_backup_category">Backup &amp; Restore</string>
    <string name="preference_backup_title">Backup</string>
    <string name="preference_backup_summary">Backup configuration to sd-card</string>
    <string name="preference_restore_title">Restore</string>
    <string name="preference_restore_summary">Restore configuration from sd-card</string>

    <!-- about dialog -->
    <string name="about_dialog_title">About Ringer</string>
    <string name="about_dialog_message">\n<b>Original Source</b>\n<u>M. Wiggins</u>\n\n<b>Source Code</b>\n<u>http://github.com/lithium/ringer</u>\n\n<b>Website</b>\n<u>http://android.hlidskialf.com/apps/ringer</u>\n\nPublished by Hlidskialf Software\n\nNo warranty of any kind.</string>
    
    <!-- tutorial -->
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="tutorial_page1_title">1. What Is Ringer?</string>
    <string name="tutorial_page1_content">Ringer provides audio profiles.\n\nCreate any number of profiles and configure the silent-mode, vibration, volume levels and ringtones for each.</string>
    <string name="tutorial_page2_title">2. First Time Setup</string>
    <string name="tutorial_page2_content">To get ringtone profiles you need to use Slots.\n\nA Slot is a container for a ringtone.\n\nFirst create all your slots.\nThen go into each app\'s settings and set the ringtone to it\'s matching Ringer Slot.\n\nYou only have to do this once.</string>
    <string name="tutorial_page3_title">3. Create Your Profiles</string>
    <string name="tutorial_page3_content">Once you have assigned each app a slot, set up your profiles and assign a ringtone to a profile\'s slot.\n\nActivate a profile and have it automatically change the ringtone for each app that is using a slot.</string>

    <!-- tonepicker -->
    <string name="bragi_slots">Ringer Slots</string>
</resources>
