<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference android:key="name"
      android:persistent="false"
      android:title="@string/profile_editor_name"
      />

    <PreferenceScreen android:key="volume_screen"
      android:persistent="false"
      android:title="@string/profile_editor_volume_screen"
      android:summary="@string/profile_editor_volume_screen_summary"
      />

    <Preference android:key="default_ring"
      android:persistent="false"
      android:title="@string/profile_editor_default_ring"
      />
    <Preference android:key="default_notify"
      android:persistent="false"
      android:title="@string/profile_editor_default_notify"
      />
    <Preference android:key="default_alarm"
      android:persistent="false"
      android:title="@string/profile_editor_default_alarm"
      />

</PreferenceScreen>
