<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
      <ListPreference android:key="silent_mode"
        android:persistent="false"
        android:title="@string/profile_editor_silent_mode"
        android:entries="@array/silent_mode_names"
        android:entryValues="@array/silent_mode_slugs"
        />
      <ListPreference android:key="vibrate_ring"
        android:persistent="false"
        android:title="@string/profile_editor_vibrate_ring"
        android:entries="@array/onoffsilent_names"
        android:entryValues="@array/onoffsilent_slugs"
        />
      <ListPreference android:key="vibrate_notify"
        android:persistent="false"
        android:title="@string/profile_editor_vibrate_notify"
        android:entries="@array/onoffsilent_names"
        android:entryValues="@array/onoffsilent_slugs"
        />

      <com.hlidskialf.android.preference.SeekBarPreference android:key="volume_ringer"
        android:persistent="false"
        android:title="@string/profile_editor_volume_ringer"
        />
      <com.hlidskialf.android.preference.SeekBarPreference android:key="volume_notify"
        android:persistent="false"
        android:title="@string/profile_editor_volume_notify"
        />
      <com.hlidskialf.android.preference.SeekBarPreference android:key="volume_music"
        android:persistent="false"
        android:title="@string/profile_editor_volume_music"
        />
      <com.hlidskialf.android.preference.SeekBarPreference android:key="volume_call"
        android:persistent="false"
        android:title="@string/profile_editor_volume_call"
        />
      <com.hlidskialf.android.preference.SeekBarPreference android:key="volume_system"
        android:persistent="false"
        android:title="@string/profile_editor_volume_system"
        />
      <com.hlidskialf.android.preference.SeekBarPreference android:key="volume_alarm"
        android:persistent="false"
        android:title="@string/profile_editor_volume_alarm"
        />
</PreferenceScreen>
